--- a/Week2/app/src/main/res/values/strings.xml
+++ b/Week2/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">HomeFan</string>
+    <string name="speed_controlller">speed_controller</string>
+    <string name="speed_controller">Speed Controller</string>
+    <string name="togglebutton">ToggleButton</string>
+    <string name="speed">Speed</string>
+    <string name="lights">Lights</string>
 </resources>
