--- a/Week3/app/src/main/res/values/strings.xml
+++ b/Week3/app/src/main/res/values/strings.xml
@@ -1,8 +1,3 @@
 <resources>
-    <string name="app_name">HomeFan</string>
-    <string name="speed_controlller">speed_controller</string>
-    <string name="speed_controller">Speed Controller</string>
-    <string name="togglebutton">ToggleButton</string>
-    <string name="speed">Speed</string>
-    <string name="lights">Lights</string>
+    <string name="app_name">regita_modul_individu</string>
 </resources>
